# ML-Practice

./: .gitignore  env.yml
Cpp/: CMakeLists.txt  example.cpp
NTM/: NTM.ipynb
RL/: algorithms.py  main.py  policy.py  simulate.py  types.py  utils.py  value_function.py
RL/test/: __main__.py  test_sim.py
VAE/: VAE.ipynb  VAE.py
devcontainer/: docker-compose.yml  dockerfile  run_container.sh
